[metadata]
name = modeldag
version = attr: modeldag.__version__
description = Access and Interact with ZTF Fields
readme = README.md
long_description_content_type = text/x-rst
author = Mickael Rigault
author_email = m.rigault@ipnl.in2p3.fr
license = Apache Software License
license_files = LICENSE
url = https://github.com/MickaelRigault/modeldag
keywords = astronomy, astrophysics
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics

[options]
packages = find:
include_package_data = True
zip_safe = False
python_requires = >=3.1
install_requires =
    numpy
    pandas
    
[options.package_data]
#modeldag = data/*

[options.extras_require]
docs = nbsphinx
tests = pytest; coverage

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1
